css/app.css
:root {
  --text: rgb(189, 189, 189);
  --fon-header: rgb(21, 21, 21);
  --fon: rgb(11, 11, 11);
}

body {
	background-color: var(--fon);
  font-family: var(--font);
  color: var(--text);
  font-size: 1.2rem;
}

.background {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: var(--fon);
  z-index: -1;
}

h1, h2, h3, h4, h5, h6 {
	text-align: center;
}

hr {
	border-top: 1px solid var(--text);
	margin-top: 0.5rem;
	margin-bottom: 0.5rem;
}

a {
	color: var(--text);
	text-decoration: underline;
	outline: none;
}

blockquote {
    border-left: solid 0.2rem var(--text);
    padding-left: 1rem;
}

p {
  text-indent: 2rem;
}

.content {
	font-size: 1.2rem;
	color: var(--text);
	padding-bottom: 6rem;
  cursor: pointer;
}

.content:hover {
	color: var(--text);
}

.content-button {
  width: 4rem;
  height: 4rem;
  cursor: pointer;
}

.content-button-dissable {
  cursor: default;
}

.content-button-container {
  position: absolute;
  left: 15px;
  display: inline-block;
  width: 4rem; 
  height: 4rem;
}

.edit-button-container {
  position: absolute;
  right: 15px;
  display: inline-block;
  width:4rem;
  height:4rem;
}

.title-header-container {
  display: inline-block;
  width: calc(100% - 8rem);
}

.cross {
	color: var(--text);
	text-decoration: underline;
}

.cross:hover {
	color: var(--red);
}

.link {
	color: var(--text);
	text-decoration: underline;
}

.link:hover {
	color: var(--blue);
}

.level {
  font-size: 1.2rem;
  font-family: 'Neucha', sans-serif;
  color: var(--text);
  text-align: center;
  cursor: pointer;
  border-bottom: solid 1px var(--text);
  border-top: solid 1px var(--text);
  margin-bottom: 1rem;
  margin-top: 1rem;
  padding: 0.5rem;
}

.level-active {
  background-color: rgb(33, 33, 33);
}

.header {
  position: fixed;
  left: 0;
  top: auto;
  bottom: 0;
  width: 100%;
  height: 4rem;
  background-color: var(--fon-header);
  color: var(--text);
  text-align: center;	
}

@media (min-width: 576px) {
  .header {
    top: 0;
    bottom: auto;
  }

  #sigil {
    margin-top: 4rem;
  }
}

@media (min-width: 768px) {

}

@media (min-width: 992px) {

}

@media (min-width: 1200px) {

}

